--- a/src/content/technotes/TN0019-federation-n-plus-1.mdx
+++ b/src/content/technotes/TN0019-federation-n-plus-1.mdx
@@ -65,7 +65,7 @@ type Product @key(fields: "id") {
 
 Fortunately, query planning handles N+1 queries for entities like the `Product` type by default! The query plan for this operation works like this:
 
-1. First, we `Fetch` the list of `Review`s from the Reviews subgraph using the root field `Query.topReviews`. We also ask for the `id` of each associated review.
+1. First, we `Fetch` the list of `Review`s from the Reviews subgraph using the root field `Query.topReviews`. We also ask for the `id` of each associated product.
 2. Next, we extract the `Product` _entity references_ and `Fetch` them in a **batch** to the Products subgraph's `Query._entities` root field.
 3. After we get back the `Product` entities, we merge them into the list of `Review`s, indicated by the `Flatten` step.
 
@@ -116,7 +116,7 @@ QueryPlan {
 
 ## Writing efficient entity resolvers
 
-In most subgraph implementations (including [`@apollo/subgraph`](/federation/api/apollo-subgraph)), we don't write the `Query._entities` resolver directly. Instead, we have a [reference resolver API](/federation/entities#2-define-a-reference-resolver) for resolving an individual entity reference:
+In most subgraph implementations (including [`@apollo/subgraph`](/federation/api/apollo-subgraph)), we don't write the `Query._entities` resolver directly. Instead, we use the [reference resolver API](/federation/entities#2-define-a-reference-resolver) for resolving an individual entity reference:
 
 ```js
 const resolvers = {
@@ -128,7 +128,7 @@ const resolvers = {
 };
 ```
 
-The motivation for this API relates to a subtle, critical aspect of the [subgraph specification](/federation/subgraph-spec): **the order of entity references must match the order of returned entities**. If the entities resolved by the `Query._entities` field come back in the wrong order, the results are merged with the wrong entities and we'll have incorrect results. To avoid this issue, most subgraph libraries handle entity order for you.
+The motivation for this API relates to a subtle, critical aspect of the [subgraph specification](/federation/subgraph-spec): **the order of resolved entities must match the order of the given entity references**. If we return entities in the wrong order, those fields are merged with the wrong entities and we'll have incorrect results. To avoid this issue, most subgraph libraries handle entity order for you.
 
 This does reintroduce the N+1 query problem: in the example above, we'll call `fetchProductByID` once for each entity reference.
 
